fix all bugs overlap from last merge

--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -42,14 +42,9 @@
 
 
 
-<<<<<<< HEAD
-.container {
 
-    /* font-size: 50px; */
-=======
 .container-landing {
     font-size: 50px;
->>>>>>> main
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -58,38 +53,27 @@
 
 }
 
-<<<<<<< HEAD
+
 .container {
 
     width: 100%;
     height: 100%;
 }
 
-.left-col {
-=======
+
 .left-col-landing {
->>>>>>> main
     text-align: center;
     margin-bottom: 20px;
     text-transform: uppercase;
 
 }
 
-<<<<<<< HEAD
-.left-col p {
-    font-size: 40px;
-    color: whitesmoke;
-}
 
-.left-col h1 {
-    font-size: 90px;
-=======
 .left-col-landing p {
     color: whitesmoke;
 }
 
 .left-col-landing h1 {
->>>>>>> main
     color: whitesmoke;
 }
 
@@ -199,15 +183,13 @@
     height: 100vh;
 }
 
-<<<<<<< HEAD
 
-=======
 .container-landing {
     position: relative;
     width: 100%;
     height: 100%;
 }
->>>>>>> main
+
 
 .video-landing {
     position: absolute;
@@ -230,8 +212,6 @@
 .content-wrapper-landing {
     position: relative;
     z-index: 1;
-<<<<<<< HEAD
-=======
 }
 
 /* Rest of your styles... */
@@ -252,5 +232,4 @@
 .fade-exit-active {
   opacity: 0;
   transition: opacity 1000ms ease-out;
->>>>>>> main
 }
